--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-app-admin-front/
-api-app/app/controllers/admin/
-api-app/test/controllers/admin/
+# app-admin-front/
+# api-app/app/controllers/admin/
+# api-app/test/controllers/admin/
 
