--- a/api-app/test/fixtures/messages.yml
+++ b/api-app/test/fixtures/messages.yml
@@ -1,7 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
+  sender_id: 1
+  recipient_id: 1
+  body: MyText
+  received_at: 2025-01-31 09:18:29
 
 two:
-  content: MyText
+  sender_id: 1
+  recipient_id: 1
+  body: MyText
+  received_at: 2025-01-31 09:18:29
